<resources>
    <string name="app_name">MorejMoney</string>
    <string name="txvUser">Usuario</string>
    <string name="txvPassword">Contraseña</string>
    <string name="chkRemember">Recuerdame</string>
    <string name="txvSignUp"><u>Registrate</u></string>
    <string name="btnLogIn">Acceder</string>
    <string name="btnFacebook">Acceder con Facebook</string>
    <string name="btnGoogle">Acceder con Google</string>
    <string name="menuPiggyBankOrderName">Ordenar por nombre</string>
    <string name="menuPiggyBankOrderTotalAmount">Ordenar por cantidad</string>
    <string name="menuPiggyBankOrderCreationDate">Ordenar por fecha</string>
    <string name="tilCommentHint">Escribe un comentario</string>
    <string name="tilAmountHint">Cantidad</string>
    <string name="btnFastPay">Pago rapido</string>
    <string name="chkImage">Imagen</string>
    <string name="chkLocation">Ubicacion</string>
    <string name="PiggyBank">Hucha:</string>
    <string name="Transaction">Transaccion:</string>
    <string name="imgImageDescription">Imagen de transaccion</string>
    <string name="isPayment">Pago</string>
    <string name="isDeposit">Ingreso</string>
    <string name="action_save">Guardar</string>
    <string name="addPiggyBank">Hucha ha sido creada</string>
    <string name="modPiggyBank">Hucha ha sido modificada</string>
    <string name="delPiggyBank">Hucha ha sido eliminada</string>
    <string name="action_delete">Eliminar</string>
    <string name="aboutus">Sobre ...</string>
    <string name="pref_login">Preferencias logeo</string>
    <string name="pref_remember_password">Recordar contraseña</string>
    <string name="pref_remember_password_off">No recordar</string>
    <string name="pref_remember_password_on">Si recordar</string>
    <string name="pref_title_remember_password">Recordar contraseña</string>
    <string name="preferences">Preferences</string>
    <string name="tilAddPiggyBank">Escribe un nombre</string>
    <string name="txvChooseDate">Elige una fecha:</string>
    <string name="NameEmptyError">Nombre vacio</string>
    <string name="DuplicatedName">Nombre ya esta siendo usado</string>
    <string name="PiggyBankSaved">Hucha guardada</string>
    <string name="txvEmail">Email</string>
    <string name="txvName">Nombre completo</string>
    <string name="btnSignIn">Registrate</string>
    <string name="selecteds">Seleccionados</string>
    <string name="action_list_piggybank_delete">Borrar</string>
    <string name="rbPayment">Pago</string>
    <string name="rbDeposit">Deposito</string>
    <string name="txvTypePayment">Tipo de transaccion:</string>
    <string name="txvAmount">Cantidad:</string>
    <string name="txvChooseTime">Elige una hora:</string>
    <string name="TransactionSaved">Transaccion guardada</string>
    <string name="errorAmountEmpty">Error: cantidad vacia</string>
    <string name="tilChooseDate">Elige una fecha</string>
    <string name="txvAddPiggyBankName">Elige un nombre</string>
    <string name="txvForgetPassword"><u>He olvidado mi contraseña</u></string>
    <string name="btnRecoverPassword">Recuperar contraseña</string>
    <string name="AnEmailHasBeenSend">Se ha enviado un correo a:</string>
    <string name="Payment">Pago</string>
    <string name="Deposit">Ingreso</string>
    <string name="action_list_delete">Borrar</string>
    <string name="btnOk">Aceptar</string>
    <string name="btnCancel">Cancelar</string>
    <string name="menuTittleDeletePiggyBank">Borrar Hucha</string>
    <string name="optionsLongClickPiggyBank">Opciones hucha</string>
    <string name="PiggyBankDeleted">Hucha borrada</string>
    <string name="titleDeletePiggyBank">Eliminar hucha</string>
    <string name="messageDeletePiggyBank">Desea eliminar la hucha:</string>
    <string name="downloading">Descargando...</string>
    <string name="titlePiggyBankNotEmpty">¡CUIDADO! </string>
    <string name="messagePiggyBankDeleteAll">Esta hucha aun contiene transacciones. ¿Desea borrar TODAS las transacciones asociadas a la hucha</string>
    <string name="onSuccess">Realizado con exito!</string>
    <string name="onError">Ocurrio un error.</string>
    <string name="menuPiggyBankOrderTotalAmountDESC">Ordenar cantidad desc</string>
    <string name="menuPiggyBankOrderTotalAmountASC">Ordenar cantidad asc</string>
    <string name="menuPiggyBankOrderCreationDateDESC">Ordenar fecha desc</string>
    <string name="menuPiggyBankOrderCreationDateASC">Ordenar fecha asc</string>
    <string name="titleDeleteTransaction">Eliminar transaccion</string>
    <string name="messageDeleteTransaction">Quiere borrar la transacion:</string>
    <string name="Deleted">Borrado</string>
    <string name="remember">¿Has hecho alguna transaccion?</string>
    <string name="alarm">Recordatorio</string>

</resources>
