<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtComment"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tilCommentHint" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/chkImage"
        style="@style/LoginCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/chkImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilComment" />

    <CheckBox
        android:id="@+id/chk"
        style="@style/LoginCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="CheckBox"
        app:layout_constraintEnd_toStartOf="@+id/chkLocation"
        app:layout_constraintStart_toEndOf="@+id/chkImage"
        app:layout_constraintTop_toBottomOf="@+id/tilComment" />

    <CheckBox
        android:id="@+id/chkLocation"
        style="@style/LoginCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/chkLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilComment" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btnFastPay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtAmount"
            style="@style/LoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tilAmountHint"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnFastPay"
        style="@style/LoginButtonOnDark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/btnFastPay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tilAmount"
        app:layout_constraintTop_toBottomOf="@+id/chkLocation" />

</android.support.constraint.ConstraintLayout>