<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.example.pi.ui.transaction.TransactionActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@android:color/white" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txvTypePayment"
                style="@style/LoginTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/txvTypePayment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rbgPayment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/txvTypePayment"
                app:layout_constraintStart_toStartOf="@+id/txvTypePayment"
                app:layout_constraintTop_toBottomOf="@+id/txvTypePayment">

                <RadioButton
                    android:id="@+id/rbPayment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/rbPayment" />

                <RadioButton
                    android:id="@+id/rbDeposit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbDeposit" />
            </RadioGroup>

            <TextView
                android:id="@+id/txvAmount"
                style="@style/LoginTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txvAmount"
                app:layout_constraintBaseline_toBaselineOf="@+id/edtAmount"
                app:layout_constraintStart_toStartOf="@+id/txvTypePayment" />

            <EditText
                android:id="@+id/edtAmount"
                style="@style/LoginEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txvAmount"
                app:layout_constraintTop_toBottomOf="@+id/rbgPayment"
                tools:text="3.13" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtAmount">

                <android.support.design.widget.TextInputEditText
                    style="@style/LoginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tilCommentHint" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/txvDate"
                style="@style/LoginTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/txvChooseDate"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/txvTypePayment"
                app:layout_constraintStart_toStartOf="@+id/txvAmount"
                app:layout_constraintTop_toBottomOf="@+id/tilComment" />

            <DatePicker
                android:id="@+id/dpDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:calendarViewShown="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txvDate" />

            <TextView
                android:id="@+id/txvTime"
                style="@style/LoginTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/txvChooseTime"
                app:layout_constraintEnd_toEndOf="@id/txvTypePayment"
                app:layout_constraintStart_toStartOf="@id/txvTypePayment"
                app:layout_constraintTop_toBottomOf="@+id/dpDate" />

            <TimePicker
                android:id="@+id/tmTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txvTime" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
