<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.pi.ui.signin.SigninActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRecoverPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txvRequiredUser"
                style="@style/LoginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="*"
                app:layout_constraintEnd_toStartOf="@+id/txvUser"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txvUser" />

            <TextView
                android:id="@+id/txvUser"
                style="@style/LoginTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/txvUser"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txvRequiredUser"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtUser"
                style="@style/LoginEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/txvUser"
                app:layout_constraintStart_toStartOf="@+id/txvRequiredUser"
                app:layout_constraintTop_toBottomOf="@+id/txvUser" />


            <TextView
                android:id="@+id/txvRequiredPassword"
                style="@style/LoginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                app:layout_constraintStart_toStartOf="@+id/txvRequiredUser"
                app:layout_constraintTop_toTopOf="@+id/txvPassword" />

            <TextView
                android:id="@+id/txvPassword"
                style="@style/LoginTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/txvPassword"
                app:layout_constraintEnd_toEndOf="@+id/txvUser"
                app:layout_constraintStart_toEndOf="@+id/txvRequiredPassword"
                app:layout_constraintTop_toBottomOf="@+id/edtUser" />

            <EditText
                android:id="@+id/edtPassword"
                style="@style/LoginEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="@+id/txvPassword"
                app:layout_constraintStart_toStartOf="@+id/txvRequiredPassword"
                app:layout_constraintTop_toBottomOf="@+id/txvPassword" />

            <TextView
                android:id="@+id/txvRequiredEmail"
                style="@style/LoginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                app:layout_constraintStart_toStartOf="@+id/txvRequiredPassword"
                app:layout_constraintTop_toTopOf="@+id/txvEmail" />

            <TextView
                android:id="@+id/txvEmail"
                style="@style/LoginTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/txvEmail"
                app:layout_constraintEnd_toEndOf="@+id/txvUser"
                app:layout_constraintStart_toEndOf="@+id/txvRequiredEmail"
                app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

            <EditText
                android:id="@+id/edtEmail"
                style="@style/LoginEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/txvEmail"
                app:layout_constraintStart_toStartOf="@+id/txvRequiredEmail"
                app:layout_constraintTop_toBottomOf="@+id/txvEmail" />

            <TextView
                android:id="@+id/txvName"
                style="@style/LoginTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/txvName"
                app:layout_constraintEnd_toEndOf="@+id/txvUser"
                app:layout_constraintStart_toStartOf="@id/txvRequiredUser"
                app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

            <EditText
                android:id="@+id/edtName"
                style="@style/LoginEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/txvName"
                app:layout_constraintStart_toStartOf="@+id/txvName"
                app:layout_constraintTop_toBottomOf="@+id/txvName" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnRecoverPassword"
        style="@style/LoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/btnSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
